--- a/ofi-intro-pandas.ipynb
+++ b/ofi-intro-pandas.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget -c \n",
+    "!wget -c https://raw.githubusercontent.com/jozemaria/hackathon_ceres/master/dados/dados-be-2018-analitico.csv?token=AHAAVHNX6Q63GRP6ERFOEHS5QFJ36\n",
     "## Inserir caminho RAW github do CSV"
    ]
   },
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "#Google_Colab\n",
-    "!ls -lah  dados-be*\n"
+    "!ls -lah  dados-be*"
    ]
   },
   {
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"dados/dados-be-2018-analitico.csv\", encoding='iso-8859-1', sep=';', thousands=r'.') "
+    "df = pd.read_csv(\"dados-be-2018-analitico.csv\", encoding='iso-8859-1', sep=';', thousands=r'.') "
    ]
   },
   {
@@ -251,17 +251,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# resposta\n",
-    "last_rows = df.tail()\n",
-    "last_rows"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -314,17 +303,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Resposta\n",
-    "selected_bus_lines = df[df['Linha'].isin([21,22])]\n",
-    "selected_bus_lines"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -358,17 +336,6 @@
    "outputs": [],
    "source": [
     "# insira aqui seu código:\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# resposta\n",
-    "empresas = df['Empresa'].tail()\n",
-    "empresas"
    ]
   },
   {
@@ -415,16 +382,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# resposta \n",
-    "df[['Empresa', 'Linha', 'Mês']].sample()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -444,16 +401,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# só pra mim!\n",
-    "len(empresas)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -469,18 +416,6 @@
    "outputs": [],
    "source": [
     "# insira aqui seu código:\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# resposta\n",
-    "\n",
-    "qtd_linhas = df['Linha'].unique()\n",
-    "len(qtd_linhas)"
    ]
   },
   {
@@ -562,26 +497,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# resposta\n",
-    "\n",
-    "df.columns.tolist()\n",
-    "col_names = df\n",
-    "col_names = col_names.drop(['Estudante_Cartao',\n",
-    "                            'Estudante_BT',\n",
-    "                            'Integracao_Plena',\n",
-    "                            'Integracao_Complementar',\n",
-    "                            'Gratuito_Cartao',\n",
-    "                            'Gratuito_BT',\n",
-    "                            'Tarifa_Social'], axis=1)\n",
-    "col_names.head()\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -602,22 +517,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lixo1"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -633,17 +532,6 @@
    "outputs": [],
    "source": [
     "# insira aqui seu código:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# resposta\n",
-    "df['Total_Gratuidade'] = df['Gratuito_Cartao'] + df['Gratuito_BT']\n",
-    "df.sample(5)"
    ]
   },
   {
@@ -702,15 +590,6 @@
    "outputs": [],
    "source": [
     "### OLHAR ESSE EXERCÍCIO"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[\"Estudante_Cartao\"] = df[\"Estudante_Cartao\"].astype('int32')"
    ]
   },
   {
@@ -801,19 +680,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# resposta\n",
-    "lixo = df[['Mês', 'Month', 'Empresa', 'Linha', 'Qtd_Viagens']]\n",
-    "lixo.sample()\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -834,18 +700,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# resposta\n",
-    "from calendar import mdays\n",
-    "df['Qtd_dias'] = df.Mês.apply(lambda x: mdays[x]) \n",
-    "df.sample()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -861,17 +715,6 @@
    "outputs": [],
    "source": [
     "# insira aqui seu código:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# resposta\n",
-    "lixo = df[['Mês', 'Month', 'Qtd_dias', 'Empresa', 'Linha', 'Qtd_Viagens']]\n",
-    "lixo.sample()"
    ]
   },
   {
@@ -932,15 +775,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# resposta"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -965,9 +799,7 @@
    "source": [
     "### Exercício\n",
     "\n",
-    "Crie uma conta mensal por empresa de ônibus usando groupby ().\n",
-    "\n",
-    "Dica: você precisará converter a coluna \"Mês\" em string para facilitar este exercício."
+    "Crie um DataFrame onde possamos ver a quantidade de viagens mensal por empresa de ônibus usando groupby()."
    ]
   },
   {
@@ -991,15 +823,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lixo.groupby(by=['Empresa','Mês'], as_index=False).max()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1015,27 +838,6 @@
    "outputs": [],
    "source": [
     "# insira aqui seu código:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# resposta\n",
-    "lixo = df\n",
-    "lixo1 = lixo[['Mês', 'Empresa', 'Integracao_Total']][lixo['Empresa'] == 'CONCEIÇÃO'].groupby(['Mês', 'Empresa']).sum()\n",
-    "lixo1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[['Mês','Empresa', 'Integracao_Total']][df['Empresa'] == 'CONCEIÇÃO']"
    ]
   }
  ],
