--- a/ofi-intro-pandas.ipynb
+++ b/ofi-intro-pandas.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "### Carregando dados de um arquivo de CSV:\n",
     "\n",
-    "As we can see, downloaded data is a CSV file. CSVs are commonly used to store tabular data. In simple words, it contains table rows whose cells are separated by some token, like a comma or semicolon. Pandas provides the *read_csv()* function, which takes the path of the CSV file and produces a DataFrame representation of its data."
+    "Como podemos ver, os dados baixados são um arquivo CSV. Os CSVs são comumente usados ​​para armazenar dados tabulares. Em palavras simples, ele contém linhas da tabela cujas células são separadas por algum token, como vírgula ou ponto e vírgula. O Pandas fornece a função *read_csv()*, que pega o caminho do arquivo CSV e produz uma representação DataFrame de seus dados."
    ]
   },
   {
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"dados-be-2018-analitico.csv\", encoding='iso-8859-1', sep=';', thousands=r'.') "
+    "df = pd.read_csv(\"dados-be-2018-analitico.csv?token=AHAAVHNX6Q63GRP6ERFOEHS5QFJ36\", encoding='iso-8859-1', sep=';', thousands=r'.') "
    ]
   },
   {
@@ -144,7 +144,7 @@
     "## Indexação\n",
     "\n",
     "Quando você lê um arquivo em um DataFrame, o pandas usa os valores na primeira linha (também conhecidos como cabeçalho) para os rótulos das colunas e o número da linha para os rótulos das linhas. Coletivamente, os rótulos são chamados de índice. Os DataFrames contêm um índice de linha e um índice de coluna. Aqui está um diagrama que exibe alguns dos rótulos de coluna e linha para dados:\n",
-    "![Pandas Datafrane](https://raw.githubusercontent.com/ivanovitchm/cba2018/master/1-intro-pandas/indexing.png)\n",
+    "![Pandas Datafrane](https://raw.githubusercontent.com/jozemaria/hackathon_ceres/master/indexing.png?token=AHAAVHP5I4PICDCYNWZUIXS5QFKN2)\n",
     "\n",
     "Os rótulos nos permitem fazer referência a valores no DataFrame, sobre os quais aprenderemos mais no restante deste caderno."
    ]
@@ -578,9 +578,7 @@
    "source": [
     "### Exercício\n",
     "\n",
-    "Como você pode ver nas etapas anteriores, o Pandas deixou o tipo int64 para todas as colunas numéricas. Isso significa que os números são assinados com números inteiros de 64 bits. Essa precisão é necessária para a magnitude numérica desse conjunto de dados? Caso contrário, altere o tipo dessas colunas para int32. Depois disso, verifique a economia de memória resultante.\n",
-    "\n",
-    "Dica: use df.columns.difference() para excluir colunas da conversão"
+    "Como você pode ver nas etapas anteriores, o Pandas deixou o tipo int64 para todas as colunas numéricas. Isso significa que os números são assinados com números inteiros de 64 bits. Essa precisão é necessária para a magnitude numérica desse conjunto de dados? Caso contrário, altere o tipo dessas colunas para int32. "
    ]
   },
   {
@@ -589,7 +587,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### OLHAR ESSE EXERCÍCIO"
+    "# insira aqui sua resposta"
    ]
   },
   {
@@ -760,9 +758,7 @@
    "source": [
     "### Exercício\n",
     "\n",
-    "Crie uma classificação contendo apenas a coluna \"Linha\" e uma coluna de destino (escolhida por você). Você pode classificar linhas em qualquer ordem.\n",
-    "\n",
-    "Dica: Use a função *df.drop()* se livre de colunas indesejadas e use *df.sort_values()*"
+    "Crie uma classificação contendo apenas a coluna \"Linha\" e \"Quantidade de Viagens\" e depois classifique as linhas em qualquer ordem."
    ]
   },
   {
