--- a/ofi-intro-pandas.ipynb
+++ b/ofi-intro-pandas.ipynb
@@ -98,7 +98,7 @@
    "source": [
     "### Valores aleatórios\n",
     "\n",
-    "Um novo Dataframe contendo 10 amostras aleatórias do Dataframe original pode ser criado usando o método \"sample()\":"
+    "Um novo Dataframe contendo valores aleatórios do Dataframe original pode ser criado usando o método \"sample()\":"
    ]
   },
   {
@@ -177,7 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.Mês.dtypes"
+    "df.Empresa.dtypes"
    ]
   },
   {
@@ -186,7 +186,7 @@
    "source": [
     "## Series\n",
     "\n",
-    "O objeto Series é uma estrutura de dados principal que o Pandas usa para representar linhas e colunas. Uma série é uma coleção rotulada de valores semelhantes ao vetor NumPy. A principal vantagem dos objetos Series é a capacidade de utilizar rótulos não inteiros. As matrizes NumPy só podem utilizar rótulos inteiros para indexação. O Pandas utiliza esse recurso para fornecer mais contexto ao retornar uma linha ou coluna de um DataFrame. Por exemplo, quando você seleciona uma linha de um DataFrame, em vez de retornar os valores nessa linha como uma lista, o pandas retorna um objeto Series que contém os rótulos das colunas e os valores correspondentes: O objeto Series que representa a primeira linha parece gostar:\n",
+    "O objeto Series é uma estrutura de dados principal que o Pandas usa para representar linhas e colunas. Uma série é uma coleção rotulada de valores semelhantes ao vetor NumPy. A principal vantagem dos objetos Series é a capacidade de utilizar rótulos não inteiros. As matrizes NumPy só podem utilizar rótulos inteiros para indexação. O Pandas utiliza esse recurso para fornecer mais contexto ao retornar uma linha ou coluna de um DataFrame. Por exemplo, quando você seleciona uma linha de um DataFrame, em vez de retornar os valores nessa linha como uma lista, o pandas retorna um objeto Series que contém os rótulos das colunas e os valores correspondentes.\n",
     "\n",
     "### Selecionando linhas\n",
     "\n",
@@ -219,7 +219,7 @@
    "outputs": [],
    "source": [
     "# DataFrame contendo linhas do index 3, 4, 5 e 6\n",
-    "df.loc[3:6]"
+    "df.loc[:99]"
    ]
   },
   {
@@ -247,7 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# insira aqui seu código:\n"
+    "# insira aqui seu código:"
    ]
   },
   {
@@ -299,7 +299,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# insira aqui seu código:\n"
+    "# insira aqui seu código:\n",
+    "selected_bus_lines = df[df['Linha'].isin([21,22])]\n",
+    "selected_bus_lines"
    ]
   },
   {
@@ -335,7 +337,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# insira aqui seu código:\n"
+    "# insira aqui seu código:"
    ]
   },
   {
@@ -353,7 +355,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[['Empresa','Linha']].head()"
+    "df[['Linha', 'Empresa']].head()"
    ]
   },
   {
@@ -378,7 +380,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# insira aqui seu código:\n"
+    "# insira aqui seu código:"
    ]
   },
   {
@@ -415,7 +417,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# insira aqui seu código:\n"
+    "# insira aqui seu código:"
    ]
   },
   {
@@ -444,7 +446,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.columns"
+    "la.columns"
    ]
   },
   {
@@ -453,7 +455,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.drop(['Estudante_Cartao','Estudante_BT'], axis=1).head() \n",
+    "la = df.drop(['Estudante_Cartao','Estudante_BT'], axis=1).head() \n",
     "#Observe que colocamos o 'axis=1', ele informa que valores correspondem a colunas."
    ]
   },
@@ -493,7 +495,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# insira aqui seu código:\n"
+    "# insira aqui seu código:"
    ]
   },
   {
@@ -531,7 +533,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# insira aqui seu código:"
+    "# insira aqui seu código"
    ]
   },
   {
@@ -629,7 +631,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "month_name[3]"
+    "month_name[1]"
    ]
   },
   {
@@ -655,7 +657,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Month'] = month_names\n",
+    "df['Mes2'] = month_names\n",
     "df.sample(10)"
    ]
   },
@@ -665,7 +667,7 @@
    "source": [
     "### Exercício\n",
     "\n",
-    "Como em nosso último código adicionamos a coluna 'Month' em nosso DataFrame, vamos agora selecionar só as colunas (Month, Empresa, Linha, Qtd_Viagens) respequetivamente."
+    "Como em nosso último código adicionamos a coluna 'Month' em nosso DataFrame, vamos agora selecionar só as colunas (Mês, Month, Empresa, Linha, Qtd_Viagens) respequetivamente."
    ]
   },
   {
@@ -730,7 +732,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.sort_values('Qtd_Viagens', ascending=False).head(10) \n",
+    "df.sort_values('Qtd_Viagens').head(10) \n",
     "# Quando inserimos 'ascending=False' a ordem de classificação será decrescente\n",
     "# Valor \"TRUE\" = Default!"
    ]
@@ -805,17 +807,6 @@
    "outputs": [],
    "source": [
     "# insira aqui seu código:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# resposta\n",
-    "# df['Mês'] = df['Mês'].astype('str')\n",
-    "lixo = df[['Empresa','Mês', 'Qtd_Viagens']].groupby(by=['Empresa','Mês'], as_index=True).max()"
    ]
   },
   {
